* Oct 26, 2012 *
* Merged with https://github.com/tdd/attachment_fu fork to include GEM support for use in Rails 3.2

* Oct 25, 2012 *
* Fix to support Ruby 1.9.3
* Image cropping support (append 'crop:' to desired file size when resizing)

* Mar 15, 2010 *
* Added a symbol syntax for parent-type-based size spec: calls the corresponding method on the current asset instance to
  get a Hash of required thumbnails.  Lets us dynamically specify what would otherwise be hard-coded, which is useful
  when the set of thumbnails for a given parent type varies depending on the usage context.

* Aug 6, 2009 *
* JPEG quality control finalized across processors (although CoreImage applies it in a rather fuzzy-logic way), with tests.

* Aug 4, 2009 *
* Supports the :aspect/'!' geometry flag in all processors
  (thanks to http://www.deepcalm.com/writing/cropped-thumbnails-in-attachment_fu-using-imagescience)
* JPEG quality control on thumbnailing/resizing (still buggy on Rmagick/MiniMagick though).
* Moves from GIF to PNG regardless of the source file extension's case (used to require lowercase)
* Auto-orients image (if EXIF suggests it) prior to processing with RMagickProcessor
* Fixes non-image upload tests (both regular files and Merb files)
* Fixes obsolete failures on RMagick tests (aspect_ratio tested but not initialized anymore due to new callback architecture

* Apr 17 2008 *
* amazon_s3.yml is now passed through ERB before being passed to AWS::S3 [François Beausoleil]

* Mar 22 2008 *
* Some tweaks to support Rails 2.0 and Rails 2.1 due to ActiveSupport::Callback changes.  
  Thanks to http://blog.methodmissing.com/2008/1/19/edge-callback-refactorings-attachment_fu/

* Feb. 26, 2008 *
* remove breakpoint from test_helper, makes test suite crazy (at least Rails 2+) [Rob Sanheim]
* make S3 test really optional [Rob Sanheim]

* Nov 27, 2007 *
* Handle properly ImageScience thumbnails resized from a gif file [Matt Aimonetti]