@@ -2,7 +2,7 @@
 
 Gem::Specification.new do |s|
   s.name = %q{pothoven-attachment_fu}
-  s.version = "3.2.0"
+  s.version = "3.2.2"
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["Rick Olson", "Steven Pothoven"]
