@@ -37,29 +37,8 @@ module Technoweenie # :nodoc:
           end if image?
         end
 
-        # Override image resizing method so we can support the crop option
-        # Thanks: http://stuff-things.net/2008/02/21/quick-and-dirty-cropping-images-with-attachment_fu/
-        def resize_image(img, size)
-          img.delete_profile('*')
-
-          # resize_image take size in a number of formats, we just want
-          # Strings in the form of "crop: WxH"
-          if (size.is_a?(String) && size =~ /^crop: (\d*)x(\d*)/i) ||
-              (size.is_a?(Array) && size.first.is_a?(String) &&
-                size.first =~ /^crop: (\d*)x(\d*)/i)
-            img.crop_resized!($1.to_i, $2.to_i)
-            # We need to save the resized image in the same way the
-            # orignal does.
-            quality = img.format.to_s[/JPEG/] && get_jpeg_quality
-            out_file = write_to_temp_file(img.to_blob { self.quality = quality if quality })
-            self.temp_paths.unshift out_file
-          else
-            old_resize_image(img, size) # Otherwise let attachment_fu handle it
-          end
-        end
-
         # Performs the actual resizing operation for a thumbnail
-        def old_resize_image(img, size)
+        def resize_image(img, size)
           size = size.first if size.is_a?(Array) && size.length == 1 && !size.first.is_a?(Fixnum)
           if size.is_a?(Fixnum) || (size.is_a?(Array) && size.first.is_a?(Fixnum))
             size = [size, size] if size.is_a?(Fixnum)
@@ -68,10 +47,13 @@ module Technoweenie # :nodoc:
             dimensions = size[1..size.size].split("x")
             img.crop_resized!(dimensions[0].to_i, dimensions[1].to_i)
           else
-            img.change_geometry(size.to_s) { |cols, rows, image| image.resize!(cols<1 ? 1 : cols, rows<1 ? 1 : rows) }
+            img.change_geometry(size.to_s) { |cols, rows, image|
+              image.resize!(cols<1 ? 1 : cols, rows<1 ? 1 : rows)
+            }
           end
           self.width  = img.columns if respond_to?(:width)
           self.height = img.rows    if respond_to?(:height)
+          img = img.sharpen if attachment_options[:sharpen_on_resize] && img.changed?
           img.strip! unless attachment_options[:keep_profile]
           quality = img.format.to_s[/JPEG/] && get_jpeg_quality
           out_file = write_to_temp_file(img.to_blob { self.quality = quality if quality })
