@@ -1,5 +1,9 @@
+* Nov 15, 2012 *
+* Removed 'crop:' option as already included when prefixing geometry with a 'c'.  Add note to docs.
+* Added option to sharpen resized images ':sharpen_on_resize'
+
 * Oct 26, 2012 *
-* Merged with https://github.com/tdd/attachment_fu fork to include GEM support for use in Rails 3.2
+* Merged with https://github.com/tdd/attachment_fu fork to include GEM support for use in Rails 3.2, and bumped version to 3.2.x to indicate Rails 3.2 support.
 
 * Oct 25, 2012 *
 * Fix to support Ruby 1.9.3
